# i8088

./: .gitignore
signal_generator/: CLAUDE.md  CMakeLists.txt  Makefile  README.md  SCHEMATIC.md  lcd1602_i2c.c  lcd1602_i2c.h  main.c
